--- a/Curso_de_Estatistica/Curso_de_Estatística_Parte_1.ipynb
+++ b/Curso_de_Estatistica/Curso_de_Estatística_Parte_1.ipynb
@@ -1812,8 +1812,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 40,
+   "source": [
+    "import numpy as np"
+   ],
    "outputs": [],
    "metadata": {
     "colab": {},
@@ -1845,9 +1847,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 41,
+   "source": [
+    "n = dados.shape[0]\n",
+    "n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "76840"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 41
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1860,9 +1876,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 47,
+   "source": [
+    "k = 1 + (10 / 3) * np.log10(n)\n",
+    "k"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "17.285291187298853"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 47
+    }
+   ],
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1871,9 +1901,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 48,
+   "source": [
+    "k = int(k.round(0))\n",
+    "k"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 48
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1911,9 +1955,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 51,
+   "source": [
+    "pd.value_counts(\n",
+    "    pd.cut(\n",
+    "        x = dados['Renda'],\n",
+    "        bins = 17, # obtido pela regra de Sturges\n",
+    "        include_lowest = True\n",
+    "    ),\n",
+    "    sort = False\n",
+    ")"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(-200.001, 11764.706]       75594\n",
+       "(11764.706, 23529.412]       1022\n",
+       "(23529.412, 35294.118]        169\n",
+       "(35294.118, 47058.824]         19\n",
+       "(47058.824, 58823.529]         16\n",
+       "(58823.529, 70588.235]          5\n",
+       "(70588.235, 82352.941]          4\n",
+       "(82352.941, 94117.647]          1\n",
+       "(94117.647, 105882.353]         6\n",
+       "(105882.353, 117647.059]        0\n",
+       "(117647.059, 129411.765]        1\n",
+       "(129411.765, 141176.471]        0\n",
+       "(141176.471, 152941.176]        0\n",
+       "(152941.176, 164705.882]        0\n",
+       "(164705.882, 176470.588]        0\n",
+       "(176470.588, 188235.294]        0\n",
+       "(188235.294, 200000.0]          3\n",
+       "Name: Renda, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 51
+    }
+   ],
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1922,9 +2003,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 54,
+   "source": [
+    "frequencia = pd.value_counts(\n",
+    "    pd.cut(\n",
+    "        x = dados['Renda'],\n",
+    "        bins = 17, # obtido pela regra de Sturges\n",
+    "        include_lowest = True\n",
+    "    ),\n",
+    "    sort = False\n",
+    ")\n",
+    "frequencia"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(-200.001, 11764.706]       75594\n",
+       "(11764.706, 23529.412]       1022\n",
+       "(23529.412, 35294.118]        169\n",
+       "(35294.118, 47058.824]         19\n",
+       "(47058.824, 58823.529]         16\n",
+       "(58823.529, 70588.235]          5\n",
+       "(70588.235, 82352.941]          4\n",
+       "(82352.941, 94117.647]          1\n",
+       "(94117.647, 105882.353]         6\n",
+       "(105882.353, 117647.059]        0\n",
+       "(117647.059, 129411.765]        1\n",
+       "(129411.765, 141176.471]        0\n",
+       "(141176.471, 152941.176]        0\n",
+       "(152941.176, 164705.882]        0\n",
+       "(164705.882, 176470.588]        0\n",
+       "(176470.588, 188235.294]        0\n",
+       "(188235.294, 200000.0]          3\n",
+       "Name: Renda, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 54
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1937,9 +2056,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 55,
+   "source": [
+    "percentual = pd.value_counts(\n",
+    "    pd.cut(\n",
+    "        x = dados['Renda'],\n",
+    "        bins = 17, # obtido pela regra de Sturges\n",
+    "        include_lowest = True\n",
+    "    ),\n",
+    "    sort = False,\n",
+    "    normalize = True\n",
+    ")\n",
+    "percentual"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(-200.001, 11764.706]       0.983784\n",
+       "(11764.706, 23529.412]      0.013300\n",
+       "(23529.412, 35294.118]      0.002199\n",
+       "(35294.118, 47058.824]      0.000247\n",
+       "(47058.824, 58823.529]      0.000208\n",
+       "(58823.529, 70588.235]      0.000065\n",
+       "(70588.235, 82352.941]      0.000052\n",
+       "(82352.941, 94117.647]      0.000013\n",
+       "(94117.647, 105882.353]     0.000078\n",
+       "(105882.353, 117647.059]    0.000000\n",
+       "(117647.059, 129411.765]    0.000013\n",
+       "(129411.765, 141176.471]    0.000000\n",
+       "(141176.471, 152941.176]    0.000000\n",
+       "(152941.176, 164705.882]    0.000000\n",
+       "(164705.882, 176470.588]    0.000000\n",
+       "(176470.588, 188235.294]    0.000000\n",
+       "(188235.294, 200000.0]      0.000039\n",
+       "Name: Renda, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 55
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1949,6 +2107,159 @@
     "id": "n9kkJ0WTjQL_",
     "outputId": "994669b3-9a10-424c-adab-6f934f87fd45"
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "source": [
+    "dist_freq_quantitativas_amplitude_fixa = pd.DataFrame(\n",
+    "    {'Frequência' : frequencia, 'Porcentagem (%)' : percentual}\n",
+    ")\n",
+    "dist_freq_quantitativas_amplitude_fixa"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Frequência</th>\n",
+       "      <th>Porcentagem (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>(-200.001, 11764.706]</th>\n",
+       "      <td>75594</td>\n",
+       "      <td>0.983784</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(11764.706, 23529.412]</th>\n",
+       "      <td>1022</td>\n",
+       "      <td>0.013300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(23529.412, 35294.118]</th>\n",
+       "      <td>169</td>\n",
+       "      <td>0.002199</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(35294.118, 47058.824]</th>\n",
+       "      <td>19</td>\n",
+       "      <td>0.000247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(47058.824, 58823.529]</th>\n",
+       "      <td>16</td>\n",
+       "      <td>0.000208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(58823.529, 70588.235]</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.000065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(70588.235, 82352.941]</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.000052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(82352.941, 94117.647]</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(94117.647, 105882.353]</th>\n",
+       "      <td>6</td>\n",
+       "      <td>0.000078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(105882.353, 117647.059]</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(117647.059, 129411.765]</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(129411.765, 141176.471]</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(141176.471, 152941.176]</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(152941.176, 164705.882]</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(164705.882, 176470.588]</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(176470.588, 188235.294]</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(188235.294, 200000.0]</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.000039</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          Frequência  Porcentagem (%)\n",
+       "(-200.001, 11764.706]          75594         0.983784\n",
+       "(11764.706, 23529.412]          1022         0.013300\n",
+       "(23529.412, 35294.118]           169         0.002199\n",
+       "(35294.118, 47058.824]            19         0.000247\n",
+       "(47058.824, 58823.529]            16         0.000208\n",
+       "(58823.529, 70588.235]             5         0.000065\n",
+       "(70588.235, 82352.941]             4         0.000052\n",
+       "(82352.941, 94117.647]             1         0.000013\n",
+       "(94117.647, 105882.353]            6         0.000078\n",
+       "(105882.353, 117647.059]           0         0.000000\n",
+       "(117647.059, 129411.765]           1         0.000013\n",
+       "(129411.765, 141176.471]           0         0.000000\n",
+       "(141176.471, 152941.176]           0         0.000000\n",
+       "(152941.176, 164705.882]           0         0.000000\n",
+       "(164705.882, 176470.588]           0         0.000000\n",
+       "(176470.588, 188235.294]           0         0.000000\n",
+       "(188235.294, 200000.0]             3         0.000039"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 56
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
