--- a/Curso_de_Estatistica/Curso_de_Estatística_Parte_1.ipynb
+++ b/Curso_de_Estatistica/Curso_de_Estatística_Parte_1.ipynb
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "source": [
     "dados.head()"
    ],
@@ -1495,14 +1495,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 30
+     "execution_count": 29
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "source": [
     "pd.cut(x = dados['Renda'],\n",
     "       bins = classes,\n",
@@ -1530,7 +1530,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 30
     }
    ],
    "metadata": {
@@ -1545,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "source": [
     "frequencia = pd.value_counts(pd.cut(x = dados['Renda'],\n",
     "                                    bins = classes,\n",
@@ -1568,7 +1568,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 33
+     "execution_count": 31
     }
    ],
    "metadata": {
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "source": [
     "percentual = pd.value_counts(pd.cut(x = dados['Renda'],\n",
     "                                    bins = classes,\n",
@@ -1607,7 +1607,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 34
+     "execution_count": 32
     }
    ],
    "metadata": {
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "source": [
     "dist_freq_quantitativas_personalizadas = pd.DataFrame(\n",
     "    {'Frequência' : frequencia, 'Porcentagem (%)' : percentual}\n",
@@ -1696,7 +1696,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 38
+     "execution_count": 33
     }
    ],
    "metadata": {
@@ -1711,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "source": [
     "dist_freq_quantitativas_personalizadas.sort_index(ascending = False)"
    ],
@@ -1782,7 +1782,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 39
+     "execution_count": 34
     }
    ],
    "metadata": {}
@@ -1812,7 +1812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "source": [
     "import numpy as np"
    ],
@@ -1847,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "source": [
     "n = dados.shape[0]\n",
     "n"
@@ -1861,7 +1861,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 41
+     "execution_count": 36
     }
    ],
    "metadata": {
@@ -1876,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 37,
    "source": [
     "k = 1 + (10 / 3) * np.log10(n)\n",
     "k"
@@ -1890,7 +1890,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 47
+     "execution_count": 37
     }
    ],
    "metadata": {
@@ -1901,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 38,
    "source": [
     "k = int(k.round(0))\n",
     "k"
@@ -1915,7 +1915,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 48
+     "execution_count": 38
     }
    ],
    "metadata": {
@@ -1955,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 39,
    "source": [
     "pd.value_counts(\n",
     "    pd.cut(\n",
@@ -1992,7 +1992,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 51
+     "execution_count": 39
     }
    ],
    "metadata": {
@@ -2003,7 +2003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 40,
    "source": [
     "frequencia = pd.value_counts(\n",
     "    pd.cut(\n",
@@ -2041,7 +2041,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 54
+     "execution_count": 40
     }
    ],
    "metadata": {
@@ -2056,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 41,
    "source": [
     "percentual = pd.value_counts(\n",
     "    pd.cut(\n",
@@ -2095,7 +2095,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 55
+     "execution_count": 41
     }
    ],
    "metadata": {
@@ -2110,7 +2110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 42,
    "source": [
     "dist_freq_quantitativas_amplitude_fixa = pd.DataFrame(\n",
     "    {'Frequência' : frequencia, 'Porcentagem (%)' : percentual}\n",
@@ -2256,7 +2256,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 56
+     "execution_count": 42
     }
    ],
    "metadata": {}
@@ -2288,7 +2288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 43,
    "source": [
     "import seaborn as sns"
    ],
@@ -2301,7 +2301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 44,
    "source": [
     "ax = sns.distplot(dados['Altura'], kde = False)\n",
     "\n",
@@ -2315,11 +2315,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f20871994f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f382b16f520>"
       ]
      },
      "metadata": {},
-     "execution_count": 59
+     "execution_count": 44
     },
     {
      "output_type": "display_data",
@@ -2346,7 +2346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 45,
    "source": [
     "ax = sns.distplot(dados['Altura'])\n",
     "\n",
@@ -2360,11 +2360,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2086900e20>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f382a8845e0>"
       ]
      },
      "metadata": {},
-     "execution_count": 60
+     "execution_count": 45
     },
     {
      "output_type": "display_data",
@@ -2391,7 +2391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 46,
    "source": [
     "dados['Altura'].hist(bins = 50, figsize = (12, 6))"
    ],
@@ -2400,11 +2400,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f208679f280>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f382a7a54f0>"
       ]
      },
      "metadata": {},
-     "execution_count": 61
+     "execution_count": 46
     },
     {
      "output_type": "display_data",
@@ -2431,7 +2431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 47,
    "source": [
     "dist_freq_quantitativas_personalizadas"
    ],
@@ -2502,7 +2502,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 62
+     "execution_count": 47
     }
    ],
    "metadata": {
@@ -2517,7 +2517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 48,
    "source": [
     "dist_freq_quantitativas_personalizadas['Frequência'].plot.bar(width = 1, color = 'blue', alpha = 0.2, figsize = (12, 6))"
    ],
@@ -2526,11 +2526,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2087180e20>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f382a6bd850>"
       ]
      },
      "metadata": {},
-     "execution_count": 64
+     "execution_count": 48
     },
     {
      "output_type": "display_data",
@@ -2578,9 +2578,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 49,
+   "source": [
+    "df = pd.DataFrame(data = {'Fulano': [8, 10, 4, 8, 6, 10, 8],\n",
+    "                          'Beltrano': [10, 2, 0.5, 1, 3, 9.5, 10],\n",
+    "                          'Sicrano': [7.5, 8, 7, 8, 8, 8.5, 7]},\n",
+    "                 index = ['Matemática',\n",
+    "                          'Português',\n",
+    "                          'Inglês',\n",
+    "                          'Geografia',\n",
+    "                          'História',\n",
+    "                          'Física',\n",
+    "                          'Química'])\n",
+    "df.rename_axis('Matérias', axis = 'columns', inplace = True)\n",
+    "df"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Matérias</th>\n",
+       "      <th>Fulano</th>\n",
+       "      <th>Beltrano</th>\n",
+       "      <th>Sicrano</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Matemática</th>\n",
+       "      <td>8</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Português</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Inglês</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Geografia</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>História</th>\n",
+       "      <td>6</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Física</th>\n",
+       "      <td>10</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>8.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Química</th>\n",
+       "      <td>8</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Matérias    Fulano  Beltrano  Sicrano\n",
+       "Matemática       8      10.0      7.5\n",
+       "Português       10       2.0      8.0\n",
+       "Inglês           4       0.5      7.0\n",
+       "Geografia        8       1.0      8.0\n",
+       "História         6       3.0      8.0\n",
+       "Física          10       9.5      8.5\n",
+       "Química          8      10.0      7.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 49
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2614,9 +2716,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 50,
+   "source": [
+    "(8 + 10 + 4 + 8 + 6 + 10 + 8) / 7"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "7.714285714285714"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 50
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2629,9 +2744,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 51,
+   "source": [
+    "df[\"Fulano\"].mean()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "7.714285714285714"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 51
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2644,9 +2772,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 52,
+   "source": [
+    "dados['Renda'].mean()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2000.3831988547631"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 52
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2659,9 +2800,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 53,
+   "source": [
+    "dados.head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>UF</th>\n",
+       "      <th>Sexo</th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Cor</th>\n",
+       "      <th>Anos de Estudo</th>\n",
+       "      <th>Renda</th>\n",
+       "      <th>Altura</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>800</td>\n",
+       "      <td>1.603808</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1150</td>\n",
+       "      <td>1.739790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>880</td>\n",
+       "      <td>1.760444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3500</td>\n",
+       "      <td>1.783158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>47</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>150</td>\n",
+       "      <td>1.690631</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   UF  Sexo  Idade  Cor  Anos de Estudo  Renda    Altura\n",
+       "0  11     0     23    8              12    800  1.603808\n",
+       "1  11     1     23    2              12   1150  1.739790\n",
+       "2  11     1     35    8              15    880  1.760444\n",
+       "3  11     0     46    2               6   3500  1.783158\n",
+       "4  11     1     47    8               9    150  1.690631"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 53
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2671,6 +2913,29 @@
     "id": "CGgJbsK0HBQc",
     "outputId": "35b8a334-5f7d-4f17-ec85-2e10ec6ae5ab"
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "source": [
+    "dados.groupby(['Sexo'])['Renda'].mean()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Sexo\n",
+       "0    2192.441596\n",
+       "1    1566.847393\n",
+       "Name: Renda, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 55
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
